fix(style): prevent credits to overlap with other content

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -857,7 +857,9 @@
 
   &__credits-container {
   	position: relative;
-  	padding: 80px 0 0;
+    padding: 80px 0 0;
+    background-color: #000;
+    height: 100%;
   }
 
   &__credits-text {
